--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "strapi": "strapi"
   },
   "dependencies": {
+    "@strapi/plugin-graphql": "4.3.6",
     "@strapi/plugin-i18n": "4.3.6",
     "@strapi/plugin-users-permissions": "4.3.6",
     "@strapi/provider-upload-cloudinary": "^4.3.8",
     "@strapi/strapi": "4.3.6",
     "better-sqlite3": "7.4.6",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "strapi-plugin-meilisearch": "^0.7.1"
   },
   "author": {
     "name": "A Strapi developer"
