--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@strapi/plugin-users-permissions": "4.3.6",
     "@strapi/provider-upload-cloudinary": "^4.3.8",
     "@strapi/strapi": "4.3.6",
-    "better-sqlite3": "7.4.6",
+    "nodemailer": "^6.8.0",
     "pg": "^8.8.0",
     "strapi-plugin-meilisearch": "^0.7.1"
   },
