--- a/nginx/config/conf.d/sites-available/strapi.conf
+++ b/nginx/config/conf.d/sites-available/strapi.conf
@@ -1,26 +1,37 @@
-
-  server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
-
-    server_name cms.capitalveiculosdf.com;
-
-    # include       common.conf;
-    # include       /etc/nginx/ssl.conf;
+server {
+    listen                  443 ssl;
+    listen                  [::]:443 ssl;
+    server_name             cms.capitalveiculosdf.com default_server;
+    ssl_certificate         /root/ssl/ca-cert.pem;
+    ssl_certificate_key     /root/ssl/ca-key.pem;
 
     location / {
-      proxy_pass  http://strapi:1337;
-      # include     common_location.conf;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+        proxy_redirect off;
+        proxy_pass http://strapi:1337;
     }
+}
 
-    # location /strapi/ {
-    #   rewrite ^/strapi/(.*)$ /$1 break;
-    #   proxy_pass  http://strapi:1337;
-    # }
+server {
+    listen                  443 ssl;
+    listen                  [::]:443 ssl;
+    server_name             search.capitalveiculosdf.com default_server;
+    ssl_certificate         /root/ssl/ca-cert.pem;
+    ssl_certificate_key     /root/ssl/ca-key.pem;
 
-    # location /search/ {
-    #   rewrite ^/search/(.*)$ /$1 break;
-    #   proxy_pass http://meilisearch:7700;
-    # }
-  }
+    location / {
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_set_header Connection "upgrade";
 
+        proxy_redirect off;
+        proxy_pass http://meilisearch:7700;
+    }
+}
