--- a/vhosts/search.capitalveiculosdf.com.conf
+++ b/vhosts/search.capitalveiculosdf.com.conf
@@ -6,5 +6,5 @@ location / {
   proxy_set_header Connection "upgrade";
 
   proxy_redirect off;
-  proxy_pass http://strapi:7700;
+  proxy_pass http://meilisearch:7700;
 }
